# IRO

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/: IRO.h
src/: IRO.c  miniz.h  stb_image.h  stb_image_write.h
